<resources>
    <string name="app_name">Four In A Row!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameHint">Enter Your Name</string>
    <string name="gameTie">It\'s a tie! Lame...</string>
    <string name="reset_text">Reset</string>
    <string name="welcome_text">Welcome to Four in a Row!</string>
    <string name="rules_text">Rules and Gameplay</string>
    <string name="rule1_text">- Users will take turns with an AI placing color squares on a 6x6 grid</string>
    <string name="rule2_text">- In order to win, either player must attain 4 of their color squares in a row/column/diagonal</string>
    <string name="rule3_text">- The AI will try to block player wins going either horizontally or vertically</string>
    <string name="start_text">Start</string>

</resources>